// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Story Form Suite should render the create form 1`] = `
<div>
  <div
    class="max-w-[1400px] m-auto my-16 px-16"
  >
    <h1
      class="text-center text-blue-700 font-bold  text-5xl"
    >
      Submit Your Story!
    </h1>
    <form
      class="flex flex-col gap-4"
    >
      <div>
        <label
          for="businessName"
        >
          Business Name: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="businessName"
          placeholder="Business Name: "
          value=""
        />
      </div>
      <div>
        <label
          for="location"
        >
          Location: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="location"
          placeholder="Location: "
          value=""
        />
      </div>
      <div>
        <label
          for="owner"
        >
          Owner: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="owner"
          placeholder="Owner: "
          value=""
        />
      </div>
      <div>
        <label
          for="industry"
        >
          Industry: 
        </label>
        <select
          class="rounded-md py-2 px-4 w-full"
          id="industry"
        >
          <option
            value="64b2bcb7d494db4be50a9abe"
          >
            Agriculture and Farming
          </option>
          <option
            value="64b2bcb7d494db4be50a9abf"
          >
            Automotive
          </option>
          <option
            value="64b2bcb7d494db4be50a9ac0"
          >
            Aviation
          </option>
        </select>
      </div>
      <div>
        <label
          for="gender"
        >
          Gender: 
        </label>
        <select
          class="rounded-md py-2 px-4 w-full"
          id="gender"
        >
          <option
            value="64b2bcb7d494db4be50a9abc"
          >
            Female
          </option>
          <option
            value="64b2bcb7d494db4be50a9abd"
          >
            Male
          </option>
        </select>
      </div>
      <div>
        <label
          for="website"
        >
          Website: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="website"
          placeholder="Website: "
          value=""
        />
      </div>
      <div>
        <label
          for="linkedIn"
        >
          LinkedIn: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="linkedIn"
          placeholder="LinkedIn: "
          value=""
        />
      </div>
      <div>
        <label
          for="facebook"
        >
          Facebook: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="facebook"
          placeholder="Facebook: "
          value=""
        />
      </div>
      <div>
        <label
          for="instagram"
        >
          Instagram: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="instagram"
          placeholder="Instagram: "
          value=""
        />
      </div>
      <button
        class="w-fit border-2 border-blue-700 px-4 py-2 rounded-md text-white bg-blue-700"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</div>
`;

exports[`Create Story Form Suite should render the edit form 1`] = `
<div>
  <div
    class="max-w-[1400px] m-auto my-16 px-16"
  >
    <h1
      class="text-center text-blue-700 font-bold  text-5xl"
    >
      Edit Your Story!
    </h1>
    <form
      class="flex flex-col gap-4"
    >
      <div>
        <label
          for="businessName"
        >
          Business Name: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="businessName"
          placeholder="Business Name: "
          value=""
        />
      </div>
      <div>
        <label
          for="location"
        >
          Location: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="location"
          placeholder="Location: "
          value=""
        />
      </div>
      <div>
        <label
          for="owner"
        >
          Owner: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="owner"
          placeholder="Owner: "
          value=""
        />
      </div>
      <div>
        <label
          for="industry"
        >
          Industry: 
        </label>
        <select
          class="rounded-md py-2 px-4 w-full"
          id="industry"
        >
          <option
            value="64b2bcb7d494db4be50a9abe"
          >
            Agriculture and Farming
          </option>
          <option
            value="64b2bcb7d494db4be50a9abf"
          >
            Automotive
          </option>
          <option
            value="64b2bcb7d494db4be50a9ac0"
          >
            Aviation
          </option>
        </select>
      </div>
      <div>
        <label
          for="gender"
        >
          Gender: 
        </label>
        <select
          class="rounded-md py-2 px-4 w-full"
          id="gender"
        >
          <option
            value="64b2bcb7d494db4be50a9abc"
          >
            Female
          </option>
          <option
            value="64b2bcb7d494db4be50a9abd"
          >
            Male
          </option>
        </select>
      </div>
      <div>
        <label
          for="website"
        >
          Website: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="website"
          placeholder="Website: "
          value=""
        />
      </div>
      <div>
        <label
          for="linkedIn"
        >
          LinkedIn: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="linkedIn"
          placeholder="LinkedIn: "
          value=""
        />
      </div>
      <div>
        <label
          for="facebook"
        >
          Facebook: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="facebook"
          placeholder="Facebook: "
          value=""
        />
      </div>
      <div>
        <label
          for="instagram"
        >
          Instagram: 
        </label>
        <input
          class="rounded-md border-2 border-gray-400 py-2 px-4 w-full"
          id="instagram"
          placeholder="Instagram: "
          value=""
        />
      </div>
      <button
        class="w-fit border-2 border-blue-700 px-4 py-2 rounded-md text-white bg-blue-700"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</div>
`;
